--- a/.github/workflow/deploy.yml
+++ b/.github/workflow/deploy.yml
@@ -25,7 +25,7 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: "20"
-          cache: 'npm'
+          # Removed cache: 'npm' to avoid error when package-lock.json is missing
 
       - name: Install dependencies
         run: npm install
@@ -33,8 +33,6 @@ jobs:
       - name: Build
         run: npm run build
         env:
-          # If your vite config defines process.env, this secret will be injected.
-          # Make sure to add API_KEY to your GitHub Repo Secrets.
           API_KEY: ${{ secrets.API_KEY }}
 
       - name: Setup Pages
